Fixed_bee_depth_with_z-index_and_fixed_font

--- a/css/juego.css
+++ b/css/juego.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Estratos";
-    src: url(../font/ESTRATOSFONT.woff2) format('woff2');
+    src: url(../font/Estratos-Regular.woff2) format('woff2');
 }
 
 body{
@@ -93,8 +93,8 @@ a:hover {
 .coli_4
  {
   position: absolute;
-  top:150px;
-  left:600px;
+  top:130px;
+  left:680px;
   z-index: 1;
  }
 
